third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/same-from-type.rs
use thiserror::Error;

#[derive(Error, Debug)]
pub enum Error {
    #[error("failed to open")]
    OpenFile(#[from] std::io::Error),
    #[error("failed to close")]
    CloseFile(#[from] std::io::Error),
}

fn main() {}
